# TDPilot_deepseekv4

./: .git-blame-ignore-revs  .gitignore  .mcp.json  .mcp.json.claude-desktop-template  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  install.ps1  install.sh  plugin_README.md  pyproject.toml  setup_mcp_in_td.py
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  npm-publish.yml  release-assets.yml
commands/: td-build.md  td-check.md  td-explain.md  td-snapshot.md  td-tour.md
data/: .gitignore
data/brains/: _template_community.yaml  brains_manifest.json  derivative.yaml  popx.yaml
docs/: CHUNK_SCHEMA.md  MANUAL.md  NEW_SESSION_PROMPT.md  ROADMAP.md
docs/examples/: 01-audio-reactive-noise-field.md  02-feedback-loop-from-scratch.md  03-project-health-audit.md  04-glsl-shader-driven-by-mouse.md  05-record-1080p-clean-export.md
docs/images/: README.md
docs/plans/: AUDIT_2026_05_19_FOLLOWUPS.md  README.md  v2.4_IMPLEMENTATION_PLAN.md  v2.5_IMPLEMENTATION_PLAN.md  v2.6_IMPLEMENTATION_PLAN.md  v2.7_IMPLEMENTATION_PLAN.md
mcp/: manifest.json
mcp/profiles/: claude-desktop.json  cursor.json  generic.json
npm/: README.md  brains.js  install.js  package.json  plugin.js  run.js
scripts/: _chunk_schema_v1.py  bench_tools.py  build_brain.py  build_docs_brain.py  build_mcpb.py  build_plugin_zip.py  build_popx_brain.py  build_seed_corpus.py  build_tutorial_brain.py  capture_deepseek_fixtures.py  check_no_personal_paths.sh  check_package_builds.sh  check_release_gates.py  check_tox_api_freshness.py  check_tox_freshness.py  check_versions.py  doctor_live.py  download_brains.py  export_tool_schemas.py  full_td_mcp_e2e.py  install_claude_plugin.sh  patch_session_smoke.py  render_mcp_config.py  render_track.py  runtime_stress_matrix.py  smoke_mcp_registry.py  soak_events.py  sync_counts.py
skills/popx-touchdesigner/: SKILL.md
skills/popx-touchdesigner/references/: .gitignore  BUILD.md
skills/popx-touchdesigner/scripts/: build_popx_refs.py  search_popx_refs.py
skills/tdpilot-dpsk4-core/: SKILL.md
skills/tdpilot-dpsk4-core/references/: advanced-workflows.md  anti-patterns.md  audio-reactive-glsl.md  depth-and-body-tracking.md  glsl-idioms.md  midi-osc-control.md  ndi-and-streaming.md  preset-systems-and-ui.md  recording-and-export.md
skills/tdpilot-dpsk4-production/: SKILL.md
src/td_mcp/: __init__.py  __main__.py  app.py  audit.py  auth_bootstrap.py  capabilities.py  component_notes_store.py  errors.py  exec_safety.py  locations_store.py  release_gates.py  server.py  services.py  td_client.py  telemetry.py  tool_registry.py
src/td_mcp/events/: __init__.py  event_manager.py  uri.py
src/td_mcp/hints/: __init__.py  loader.py  orchestrator.py
src/td_mcp/jobs/: __init__.py  manager.py  task_adapter.py
src/td_mcp/knowledge/: __init__.py  card_index.py  freshness.py  web_fetcher.py
src/td_mcp/lifecycle/: __init__.py  traces.py  update_check.py
src/td_mcp/macros/: __init__.py  engine.py  loader.py  models.py  templates.py
src/td_mcp/memory/: __init__.py  analyzer.py  knowledge_store.py  preference_store.py  (+2 more)
td_component/: .tox-api-source-hash.json  .tox-source-hash.json  README.md  autostart.py  build_export_mcp_tox.py  build_tdpilot_api_corpus.py  build_tdpilot_api_tox.py  build_tdpilot_tox.py  event_emitter.py  installer.py  installer_exec.py  mcp_webserver_callbacks.py  renderer.py  state_cache.py  tdpilot-dpsk4.tox  tdpilot_API.tox  tdpilot_api_activity_log.py  tdpilot_api_agent.py  tdpilot_api_approval.py  tdpilot_api_batch.py  tdpilot_api_bm25.py  tdpilot_api_chat.html  tdpilot_api_compaction.py  tdpilot_api_config.py  tdpilot_api_cycle_detector.py  tdpilot_api_dispatcher.py  tdpilot_api_executor.py  tdpilot_api_extension.py  tdpilot_api_introspect.py  tdpilot_api_knowledge.py  tdpilot_api_lookup.py  tdpilot_api_macros.py  tdpilot_api_memory.py  tdpilot_api_official_docs.py  tdpilot_api_parexec.py  tdpilot_api_patches.py  tdpilot_api_recipes.py  tdpilot_api_recovery.py  tdpilot_api_rollback.py  tdpilot_api_runtime.py  (+12 more)
td_component/callbacks/: __init__.py  _composer.py  _header.py  auth.py  router.py  serializers.py
td_component/knowledge/: td_common_pitfalls.md  td_operator_families.md  td_python_idioms.md
td_component/skills/: performance-mode.md  popx-mode.md
tests/: _callbacks_loader.py  _constants.py  _mock_deepseek.py  _mock_dispatcher.py  conftest.py  test_active_brains.py  test_agent_add_user_message_idempotency.py  test_agent_session_sticky_tier.py  test_analyzer.py  test_analyzer_upgrades.py  test_auth_bootstrap.py  test_autopin.py  test_b003_thread_conflict_fix.py  test_b004_model_broadcast.py  test_b004_model_change_fires_every_turn.py  test_b005_run_safe_module_reload.py  test_b008_router_a_plus_c.py  test_b008t_task_sticky_pro.py  test_b009_watchdog_heartbeat.py  test_b010_args_hash_deep_canonicalize.py  test_b1_vision_pipeline.py  test_b2_authmode_wizard.py  test_b4_content_type.py  test_bench_tools.py  test_brains_cli_js.py  test_build_brain_config.py  test_build_script_panel_fixes.py  test_c6_capability_summary.py  test_c7_session_cost.py  test_c8_circuit_breaker.py  test_c9_thinking_budget.py  test_capabilities_v130.py  test_capture_confirmation.py  test_chat_html_font_toggle.py  test_chat_html_state.py  test_chat_html_turn_end_watchdog.py  test_chat_html_v210_ui.py  test_chat_html_v211_user_mark.py  test_chat_markdown.py  test_chat_node_paths_screenshots.py  (+130 more)
tests/agent_evals/: conftest.py  test_batch_failure.py  test_build.py  test_inspect.py  test_knowledge_memory.py  test_recipe.py
tests/agent_evals_mock/: _eval_harness.py  test_batch_failure_mock.py  test_build_mock.py  test_cycle_detect_mock.py  test_inspect_mock.py  test_knowledge_memory_mock.py  test_recipe_mock.py  test_thinking_echo_regression.py
tests/fixtures/: mcp_webserver_callbacks_v1.8.2_baseline.py  tool_schemas.json
tests/models/: test_patch_models.py  test_search_nodes_input.py
tests/patch/: conftest.py  test_applier.py  test_planner.py  test_undo_sentinel.py  test_validator.py  test_variants.py
(+156 files in other folders)
