[project]
name = "tdpilot-dpsk4"
version = "1.8.2"
description = "MCP server for live control of TouchDesigner — create, inspect, connect, and manipulate nodes via AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "silviu" },
]
keywords = ["mcp", "touchdesigner", "ai", "creative-coding", "derivative"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Artistic Software",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0,<2.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "websockets>=12.0",
    "beautifulsoup4>=4.12",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "numpy>=1.24",
]

[project.scripts]
tdpilot-dpsk4 = "td_mcp.server:main"

[project.urls]
Homepage = "https://github.com/dreamrec/TDPilot_deepseekv4"
Repository = "https://github.com/dreamrec/TDPilot_deepseekv4"
Issues = "https://github.com/dreamrec/TDPilot_deepseekv4/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/td_mcp"]

[tool.ruff]
line-length = 110
target-version = "py310"
exclude = [
    ".venv",
    "build",
    "dist",
    "data/normalized",
    "td_component/build_export_mcp_tox.py",  # contains TD-API-only references
    # td_component/mcp_webserver_callbacks.py is baked into tdpilot-dpsk4.tox —
    # reformatting it changes the source hash and staleness-checks the .tox
    # (which can only be rebuilt inside a running TouchDesigner session).
    # Exclude from ruff format to keep format-only releases from invalidating
    # the .tox. Changes to the TD-side endpoint contract should still be
    # made and the .tox rebuilt explicitly — this exclusion is just about
    # cosmetic reformatting.
    "td_component/mcp_webserver_callbacks.py",
    "setup_mcp_in_td.py",  # TD-runtime DAT script: references `me`, `project` globals
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
# Initial onboarding: the SIM/style codes are nice-to-have and would need a
# full pass to fix cleanly (many `try/except/pass` blocks, nested ifs, dict.keys,
# ternaries). Keep them ignored for now; revisit incrementally when touching
# each file. F401/F841/E402/B007 are kept off too because they're noisy in
# stage scripts and TD-runtime DATs that intentionally shadow names.
ignore = [
    "E501",    # line-length — handled by formatter
    "E402",    # module-level import after sys.path hack — deliberate in scripts/
    "B007",    # unused loop variable — deliberate in some iteration stubs
    "B008",    # function-call-in-default (pydantic Field)
    "B905",    # zip without strict= — not worth churning legacy tools
    "F401",    # unused imports — mostly re-exports + TD-only try-imports
    "F841",    # unused local vars — scratch scripts, fine
    "SIM102",  # collapsible-if — loses readability often
    "SIM103",  # needless bool — same
    "SIM105",  # use-contextlib-suppress — prefer explicit try/except here
    "SIM108",  # ternary — not always clearer
    "SIM110",  # reimplemented-builtin — one-off
    "SIM117",  # nested with-blocks — fine, especially in tests
    "SIM118",  # in dict.keys() — harmless over-explicitness
]
per-file-ignores = { "tests/*" = ["E741", "B011"], "td_component/*" = ["F821"] }

[tool.pytest.ini_options]
# Keep 'strict' — tests currently use explicit @pytest.mark.asyncio. Switching to 'auto'
# would turn every plain `async def` into a test and break things.
asyncio_mode = "strict"
testpaths = ["tests"]
# Make src/td_mcp importable whether pytest is invoked directly or via `uv run pytest`.
# Adding "tests" lets test files share helpers via `from _constants import ...`.
pythonpath = ["src", "tests"]
# Phase 4.2 — agent-quality evals are integration tests that hit a
# running tdpilot_API.tox webserver with a real DeepSeek key. They
# take seconds per case and need external state, so they're
# excluded from the fast unit-test run by default. Enable with:
#     pytest -m agent_eval
# CI keeps them out (default addopts deselects them).
markers = [
    "agent_eval: integration tests against a live tdpilot_API.tox (excluded by default)",
]
addopts = "-m 'not agent_eval'"

[tool.coverage.run]
source = ["src/td_mcp"]
omit = ["*/__main__.py", "*/tests/*"]

[tool.coverage.report]
skip_empty = true
show_missing = true
# Ratchet: fail CI (and local `uv run pytest --cov`) if total coverage
# drops below this floor. Current baseline at v1.4.4 is ~61% (measured
# via `uv run --with pytest-cov python -m pytest --cov=src/td_mcp`);
# floor set 1% below that to absorb minor fluctuation. Raise by ~5% per
# release as tool_registry.py gets split into focused modules (v1.5.0).
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
