[project]
name = "tdpilot-dpsk4"
version = "2.5.5"
description = "MCP server for live control of TouchDesigner — create, inspect, connect, and manipulate nodes via AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "silviu" },
]
keywords = ["mcp", "touchdesigner", "ai", "creative-coding", "derivative"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Artistic Software",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0,<2.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "websockets>=12.0",
    "beautifulsoup4>=4.12",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "numpy>=1.24",
]
# v2.5.2 — OCR sidecar dependencies. Optional because PaddleOCR brings
# ~400 MB of model + paddlepaddle deps. Users who want OCR text from
# screenshots run `pip install -e .[ocr]` (or `pip install
# tdpilot-dpsk4[ocr]`); without it, td_ocr_image returns a clear
# advisory and other tools work normally.
ocr = [
    "paddleocr>=2.7",
    "paddlepaddle>=2.6",
]
# v2.5.5 — Web ingestion via td_ingest_url (first slice of v2.6.3).
# markitdown is Microsoft's HTML→Markdown converter — lightweight,
# stdlib + a couple of small deps. Without it, td_ingest_url returns
# a structured "install [web] extras" advisory; other tools unaffected.
web = [
    "markitdown>=0.0.1",
]

[project.scripts]
tdpilot-dpsk4 = "td_mcp.server:main"

[project.urls]
Homepage = "https://github.com/dreamrec/TDPilot_deepseekv4"
Repository = "https://github.com/dreamrec/TDPilot_deepseekv4"
Issues = "https://github.com/dreamrec/TDPilot_deepseekv4/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/td_mcp"]

[tool.ruff]
line-length = 110
target-version = "py310"
exclude = [
    ".venv",
    "build",
    "dist",
    "data/normalized",
    "td_component/build_export_mcp_tox.py",  # contains TD-API-only references
    # td_component/callbacks/ is the split package whose contents get
    # concatenated into the mcp_webserver_callbacks textDAT baked into
    # tdpilot-dpsk4.tox (PR-16, v1.8.3 — was a single 3149-line file
    # mcp_webserver_callbacks.py before that). Reformatting any of the
    # splits changes the composed-bytes hash, which then staleness-checks
    # the .tox (rebuildable only inside a running TouchDesigner). The
    # splits also reference TD globals (`op`, `parent`, `me`, etc.)
    # that don't exist in standalone Python, so they would F821 anyway.
    # Exclude the whole subtree from ruff for the same reason the god
    # module was excluded pre-1.8.3: keep cosmetic reformatting out of
    # release flows that need TD to validate.
    "td_component/callbacks/",
    # PR-16 baseline fixture: a frozen v1.8.2 snapshot of the god module,
    # used by tests/test_composer_byte_equivalence.py. References TD globals
    # for the same reason as the splits above.
    "tests/fixtures/mcp_webserver_callbacks_v1.8.2_baseline.py",
    "setup_mcp_in_td.py",  # TD-runtime DAT script: references `me`, `project` globals
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
# Initial onboarding: the SIM/style codes are nice-to-have and would need a
# full pass to fix cleanly (many `try/except/pass` blocks, nested ifs, dict.keys,
# ternaries). Keep them ignored for now; revisit incrementally when touching
# each file. F401/F841/E402/B007 are kept off too because they're noisy in
# stage scripts and TD-runtime DATs that intentionally shadow names.
ignore = [
    "E501",    # line-length — handled by formatter
    "E402",    # module-level import after sys.path hack — deliberate in scripts/
    "B007",    # unused loop variable — deliberate in some iteration stubs
    "B008",    # function-call-in-default (pydantic Field)
    "B905",    # zip without strict= — not worth churning legacy tools
    "F401",    # unused imports — mostly re-exports + TD-only try-imports;
               # 252 violations in the tree as of v1.9.0; revisit when the
               # callbacks/ split (PR-16) settles so per-file ignores can
               # narrow the scope rather than the whole codebase staying off
    "SIM102",  # collapsible-if — loses readability often
    "SIM103",  # needless bool — same
    "SIM105",  # use-contextlib-suppress — prefer explicit try/except here
    "SIM108",  # ternary — not always clearer
    "SIM110",  # reimplemented-builtin — only known violation is the marker-file
               # validator in tdpilot_dpsk4_startup.py:_validate_repo, where
               # PR-16 marker-path drift cost three debug iterations; the
               # explicit loop preserves the per-marker callsite for adding a
               # `print(missing)` during incident response. Touching that file
               # also bumps the .tox source hash, so the rule is kept ignored
               # rather than enable-with-noqa
    "SIM117",  # nested with-blocks — fine, especially in tests
]
# Re-enabled in v1.9.0 (PR-23, F-16):
#   F841   — unused locals (was: scratch scripts, fine; reality: 7 real bugs)
#   SIM118 — `in dict.keys()` (was: harmless over-explicitness; reality: 5
#            sites, all `for x in d.keys():` style — clearer as `for x in d`)
per-file-ignores = { "tests/*" = ["E741", "B011"], "td_component/*" = ["F821"] }

[tool.pytest.ini_options]
# Keep 'strict' — tests currently use explicit @pytest.mark.asyncio. Switching to 'auto'
# would turn every plain `async def` into a test and break things.
asyncio_mode = "strict"
testpaths = ["tests"]
# Make src/td_mcp importable whether pytest is invoked directly or via `uv run pytest`.
# Adding "tests" lets test files share helpers via `from _constants import ...`.
pythonpath = ["src", "tests"]
# Phase 4.2 — agent-quality evals are integration tests that hit a
# running tdpilot_API.tox webserver with a real DeepSeek key. They
# take seconds per case and need external state, so they're
# excluded from the fast unit-test run by default. Enable with:
#     pytest -m agent_eval
# CI keeps them out (default addopts deselects them).
markers = [
    "agent_eval: integration tests against a live tdpilot_API.tox (excluded by default)",
]
addopts = "-m 'not agent_eval'"

[tool.coverage.run]
source = ["src/td_mcp"]
omit = ["*/__main__.py", "*/tests/*"]

[tool.coverage.report]
skip_empty = true
show_missing = true
# Ratchet: fail CI (and local `uv run pytest --cov`) if total coverage
# drops below this floor. Current baseline at v1.4.4 is ~61% (measured
# via `uv run --with pytest-cov python -m pytest --cov=src/td_mcp`);
# floor set 1% below that to absorb minor fluctuation. Raise by ~5% per
# release as tool_registry.py gets split into focused modules (v1.5.0).
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
